--- a/man/paru.conf.5
+++ b/man/paru.conf.5
@@ -52,9 +52,9 @@ sysupgrade will only act on repository packages.
 .TP
 .B Mode = aur|repo|pkgbuilds
 Select what kinds of packages paru should act on. Multiple modes can be selected
-by seperating them with a comma.
+by separating them with a comma.
 
-Additionally, a, r and p may be used as short hand for aur, repo and pkgbuilds respectivly.
+Additionally, a, r and p may be used as short hand for aur, repo and pkgbuilds respectively.
 Short form modes can also be combined without a comma.
 E.g. \fBMode = ar\fR or \fBMode = arp\fR.
 
