--- a/man/paru.8
+++ b/man/paru.8
@@ -258,9 +258,9 @@ Note that dependency resolution will still include repositoryi and AUR packages.
 .TP
 .B \-\-mode = aur|repo|pkgbuilds
 Select what kinds of packages paru should act on. Multiple modes can be selected
-by seperating them with a comma.
+by separating them with a comma.
 
-Additionally, a, r and p may be used as short hand for aur, repo and pkgbuilds respectivly.
+Additionally, a, r and p may be used as short hand for aur, repo and pkgbuilds respectively.
 Short form modes can also be combined without a comma.
 E.g. \fB--mode=ar\fR or \fB--mode=arp\fR.
 
@@ -321,7 +321,7 @@ This enables fm review mode, where PKGBUILD review is done using the file
 manager specified by command.
 
 This allows the PKGBUILDs and related files to be edited. Changes won't
-persist unless commited.
+persist unless committed.
 
 .TP
 .B \-\-fmflags <flags>
