paru.conf.5: Fix spelling mistake

--- a/man/paru.conf.5
+++ b/man/paru.conf.5
@@ -1,4 +1,4 @@
-.TH "PARU.CONF" "5" "2021\-03\-24" "paru v1.10.0" "Paru Manual"
+..TH "PARU.CONF" "5" "2021\-03\-24" "paru v1.10.0" "Paru Manual"
 .nh
 .ad l
 .SH NAME
@@ -390,7 +390,7 @@ disk.
 .TP
 .B Path = /path/to/repo
 Can be used as an alternative to \fBURL\fR to point to a PKGBUILD repository on disk.
-Unlike using a URL path, changes to this directory are propigated to paru immediately
+Unlike using a URL path, changes to this directory are propagated to paru immediately
 and not on \fBparu -Sya\fR. There is also no review step for this kind of repository.
 
 .TP
